Add customers controller with full crud functionality